fix experience wrap

--- a/src/components/Experience/ExperienceList.module.css
+++ b/src/components/Experience/ExperienceList.module.css
@@ -1,4 +1,6 @@
 .list {
 	display: flex;
+	flex-wrap: wrap;
 	list-style-type: none;
+	padding: 0;
 }
